added place holder elements to form the layout

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         </div>
       </div>
       </nav>
+      <div class="container">
+        <div class="row">
+            <div class="col-mg-9">
+                <h1>about me</h1>
+                <img src="http://placehold.it/200x200" alt="photo">
+                <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
+                <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
+            </div>
+        </div>
+    </div>
 
 
 
