--- a/index.html
+++ b/index.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>welcome</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>welcome</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">  <a class="navbar-brand" href="index.html">Lazaro Guzman</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="portfolio.html">portfolio</a>
-            <a class="nav-link" href="contact.html">contact</a>
+  <div class="container-md-9 bg-white">
+    <row>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">Lazaro Guzman</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="portfolio.html">portfolio</a>
+              <a class="nav-link" href="contact.html">contact</a>
+            </div>
           </div>
         </div>
-      </div>
       </nav>
-      <div class="container">
-        <div class="row">
-            <div class="col-mg-9">
-                <h1>about me</h1>
-                <img src="http://placehold.it/200x200" alt="photo">
-                <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
-                <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
-            </div>
-        </div>
+    </row>
+  </div>
+  <div class="container mt-4">
+    <div class="row ">
+      <div class="col-md-7  bg-white">
+        <h1>about me</h1>
+        <hr>
+        <img src="http://placehold.it/250x200" alt="photo">
+       
+          <div class="col-md-3">
+            <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id
+              prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut
+              aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
+              rump bresaola quis jerky elit ipsum.Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea
+              shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop.
+              Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip
+              chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
+            <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id
+              prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut
+              aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
+              rump bresaola quis jerky elit ipsum.</p>
+          </div>
+        
+      </div>
     </div>
+  </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
