--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   </head>
 
 <body>
-  <div class="container-md-9 bg-white">
-    <row>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
         <div class="container">
           <a class="navbar-brand" href="index.html">Lazaro Guzman</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -28,17 +27,18 @@
             </div>
           </div>
         </div>
+      </div>  
       </nav>
-    </row>
   </div>
   <div class="container mt-4">
     <div class="row ">
-      <div class="col-md-7  bg-white">
+      <div class="col-md-9  bg-white">
         <h1>about me</h1>
-        <hr>
-        <img src="http://placehold.it/250x200" alt="photo">
-       
+        <div class="row">
           <div class="col-md-3">
+        <img src="http://placehold.it/250x200" alt="photo">
+      </div>
+          <div class="col-md-7">
             <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id
               prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut
               aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
@@ -51,7 +51,7 @@
               aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
               rump bresaola quis jerky elit ipsum.</p>
           </div>
-        
+        </div>  
       </div>
     </div>
   </div>
