added pro image and fixed photo spacing and added main text

--- a/index.html
+++ b/index.html
@@ -33,23 +33,17 @@
   <div class="container mt-4">
     <div class="row ">
       <div class="col-md-8  bg-white">
-        <h1>about me</h1>
+        <h1>Howdy there</h1>
         <div class="row">
           <div class="col-md-5">
-        <img src="http://placehold.it/200x200"  alt="photo">
+        <img src="assets/images/IMG-3334.jpg" class="border" alt="photo">
       </div>
           <div class="col-md-7">
-            <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id
-              prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut
-              aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
-              rump bresaola quis jerky elit ipsum.Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea
-              shoulder fugiat bacon pig id prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop.
-              Jowl lorem exercitation ut aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip
-              chislic. Sausage biltong est rump bresaola quis jerky elit ipsum.</p>
-            <p>Spicy jalapeno bacon ipsum dolor amet pastrami sed swine short ribs ea shoulder fugiat bacon pig id
-              prosciutto doner corned beef capicola. Leberkas eiusmod dolore pork chop. Jowl lorem exercitation ut
-              aliqua incididunt, turkey leberkas doner in nostrud laboris venison tri-tip chislic. Sausage biltong est
-              rump bresaola quis jerky elit ipsum.</p>
+            <p>howdy there youre probaly wondering how i ended up here, and honestly that is a grate qurestion because no one knows how we eneded up here</p>
+            <p>for now though i shall tell you about me. I am lazaro Jorrel Guzman i like long walks on the beach coding 
+              and bored games.i was in cullinary school for 8 months before the grate plauge hit, and everything changed.
+               now im looking for a new path  in life and work and i stumbled apon a coding bootcamp that was from ucf 
+               and i had to give it a shot, and now here i am working my way through and trying my hardest. </p>
           </div>
         </div>  
       </div>
