--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <img src="assets/images/IMG-3334.jpg" class="border" alt="photo">
       </div>
           <div class="col-md-7">
-            <p>howdy there youre probaly wondering how i ended up here, and honestly that is a grate qurestion because no one knows how we eneded up here</p>
+            <p>howdy there you're probably wondering how i ended up here, and honestly that is a great question because no one knows how we ended up here</p>
             <p>for now though i shall tell you about me. I am lazaro Jorrel Guzman i like long walks on the beach coding 
-              and bored games.i was in cullinary school for 8 months before the grate plauge hit, and everything changed.
-               now im looking for a new path  in life and work and i stumbled apon a coding bootcamp that was from ucf 
-               and i had to give it a shot, and now here i am working my way through and trying my hardest. </p>
+              and bored games.i was in culinary school for 8 months before the great plague hit, and everything changed.
+               now i'm looking for a new path  in life and work and i stumbled upon a coding bootcamp that was from ucf 
+               and i had to give it a shot, and now here i am working my way through and trying my hardest.</p>
           </div>
         </div>  
       </div>
