added footer and copy right

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
       </div>
     </div>
   </div>
-
+ <footer class="page-footer pt-4">
+   <div class="container-fluid text-center text-md-left fixed-bottom"">
+    <div class="row">
+      <div class="col-md-12 bg-dark">
+        <p class="copyright">©Lazaro Jorrel Guzman </p>
+      </div>
+    </div>
+   </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
