--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <div class="container mt-4">
     <div class="row ">
       <div class="col-md-9  bg-white">
-        <H1 class="container-fluid text-center">Contact me</H1>
+        <H1 class="container-fluid text-left">Contact me</H1>
         <hr>
          <div class="col-md-9 mb-md-0 mb-5">
             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
@@ -93,12 +93,13 @@
                 <!--Grid row-->
 
             </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+            <br>
+            <div class="text-left text-md-left">
+                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">submit</a>
             </div>
             <div class="status"></div>
         </div>
+        
         <!--Grid column-->
         <hr>
       
