added java scrip for mail

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="mail" href="./assets/css/mail.php">
+  <link rel="mail java" href="./assets/css/mail.css">
 </head>
 
 <body>
@@ -94,8 +95,9 @@
 
             </form>
             <br>
+             <!--button to submit -->
             <div class="text-left text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">submit</a>
+              <a class="btn btn-primary" onclick="validateForm();">submit</a>
             </div>
             <div class="status"></div>
         </div>
@@ -111,6 +113,7 @@
       </div>
     </div>
   </div>
+ <!--footer and copyright-->
   <footer class="page-footer pt-4">
     <div class="container-fluid text-center fixed-bottom"">
            <div class=" row">
