added java scrip for mail attempt 2

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="mail" href="./assets/css/mail.php">
-  <link rel="mail java" href="./assets/css/mail.css">
+  <link rel="mail java" href="./assets/css/mail2.php">
 </head>
 
 <body>
