added java scrip for mail conformation

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="mail" href="./assets/css/mail.php">
-  <link rel="stylesheet" href="./assets/css/mail.js">
 </head>
 
 <body>
@@ -124,7 +123,7 @@
     </div>
   </footer>
 
-
+  
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -134,6 +133,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+    <script src="./assets/css/mail.js"></script>
 </body>
 
 </html>
