--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,54 @@
       </div>
     </div>
   </nav>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-md-8  bg-white">
+        <h1>My portfolio</h1>
+        <hr>
+        <div class="card-deck">
+          <div class="col-md-6 mt-4">
+          <div class="card" >
+            <img class="card-img-top" src="./assets/images/refacter.jpg" alt="refactor">
+            <div class="card-body">
+              <h5 class="card-title"> <a href="http://https://github.com/theoddpandaj/code-refactor"> Code refactor</a>
+              </h5>
+              <p class="card-text">In this project i simplified the css and made it run faster and better </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">completed</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/port.jpeg" alt="portfolio">
+            <div class="card-body">
+              <h5 class="card-title"><a href="http://https://github.com/theoddpandaj/a-responsive-portfoilo"> a
+                  responsive portfolio</a></h5>
+              <p class="card-text">here is the code base for this website another of my many projects</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">completed</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="./assets/images/java.jpeg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">java script learning</h5>
+              <p class="card-text">my current project in class</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">working on</small>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer class="page-footer pt-4">
     <div class="container-fluid text-center  fixed-bottom">
       <div class="row">
