--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           <div class="card" >
             <img class="card-img-top" src="./assets/images/refacter.jpg" alt="refactor">
             <div class="card-body">
-              <h5 class="card-title"> <a href="http://https://github.com/theoddpandaj/code-refactor"> Code refactor</a>
+              <h5 class="card-title"> <a href="https://github.com/theoddpandaj/code-refactor"> Code refactor</a>
               </h5>
               <p class="card-text">In this project i simplified the css and made it run faster and better </p>
             </div>
@@ -52,7 +52,7 @@
           <div class="card">
             <img class="card-img-top" src="./assets/images/port.jpeg" alt="portfolio">
             <div class="card-body">
-              <h5 class="card-title"><a href="http://https://github.com/theoddpandaj/a-responsive-portfoilo"> a
+              <h5 class="card-title"><a href="https://github.com/theoddpandaj/a-responsive-portfoilo"> a
                   responsive portfolio</a></h5>
               <p class="card-text">here is the code base for this website another of my many projects</p>
             </div>
