added new projects to the protpholio

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,34 @@
         <div class="card-deck">
           <div class="col-md-6 mt-4">
           <div class="card" >
+            <img class="card-img-top" src="./assets/images/screenshot.png" alt="wine">
+            <div class="card-body">
+              <h5 class="card-title"> <a href="https://github.com/andrewrb22/-.theFederationOfCoders-"> Wine&Dine</a>
+              </h5>
+              <p class="card-text">This is a group project that i worked with others i mainly did the css with one other as the other members of the gorup focued on the java and the ajax calls. we used a new type of css frame work and made a wonderful full app </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted"><a href="https://andrewrb22.github.io/-.theFederationOfCoders-/">completed</a></small>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="col-md-6 mt-4">
+          <div class="card" >
+            <img class="card-img-top" src="./assets/images/1.jpg" alt="gundam">
+            <div class="card-body">
+              <h5 class="card-title"> <a href="https://github.com/theoddpandaj/04-web-api-quiz"> gundam quiz</a>
+              </h5>
+              <p class="card-text">here is a quiz about gundams mainly that og the origal gundam form 1979 good luck yall i made all the java and it took honestly way to long hope you enjoy heres the link to take it today inside the code it also uploads your score to local storage and makes it so you can challenge your friends and family and all</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted"><a href="https://theoddpandaj.github.io/04-web-api-quiz/">completed</a></small>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="col-md-6 mt-4">
+          <div class="card" >
             <img class="card-img-top" src="./assets/images/refacter.jpg" alt="refactor">
             <div class="card-body">
               <h5 class="card-title"> <a href="https://github.com/theoddpandaj/code-refactor"> Code refactor</a>
